# memorylane

./: CHANGELOG.md  README.md  pyproject.toml
examples/: 01 - Intro.ipynb  minimal_demo.py
examples/make_report/: make_reports.py  memorylane_report.html  memorylane_report.txt
src/memorylane/: __init__.py  mem_profile.py  profile.py
src/memorylane/memory_readers/: torch.py
