[project]
name = "memorylane"
version = "0.1.0"
description = "Super-lightweight line-by-line memory profiler in numerical Python code. See where those allocations are coming from! Supports NumPy, PyTorch, and more to come."
readme = "README.md"
authors = [
    { name = "Peter Sharpe", email = "peterdsharpe@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "rich>=14.1.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "memorylane",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
memorylane = { workspace = true }
